--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.3.1
+autopep8==1.5.7
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -6,10 +7,14 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-model-utils==4.1.1
+django-notifications-hq==1.6.0
 idna==2.10
+jsonfield==3.1.0
 mysqlclient==2.0.3
 oauthlib==3.1.0
 Pillow==8.1.2
+pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.0.1
 python-social-auth==0.3.6
@@ -21,5 +26,6 @@ six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+swapper==1.1.2.post1
+toml==0.10.2
 urllib3==1.26.4
-# REVIEW: cập nhật lại requirements.txt
