--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-environ==0.4.5
 django-model-utils==4.1.1
 django-notifications-hq==1.6.0
 Faker==8.2.1
